fix: fix pagination height in news block + tests

--- a/source/index.html
+++ b/source/index.html
@@ -288,8 +288,7 @@
                 <h3 class="programs__slide-title">Волонтёрство</h3>
                 <div class="programs__slide-description-wrapper">
                   <p>Помогайте другим и развивайте свои лидерские качества.</p>
-                  <a class="programs__slide-details button-arrow" href="#"><span class="visually-hidden">Подробнее о
-                      волонтерстве</span></a>
+                  <a class="programs__slide-details button-arrow" href="#"><span class="visually-hidden">Подробнее о волонтерстве</span></a>
                 </div>
               </div>
             </div>
